--- a/ubuntu-14.04/cuda/7.5/devel/Dockerfile
+++ b/ubuntu-14.04/cuda/7.5/devel/Dockerfile
@@ -1,4 +1,4 @@
-FROM cuda:7.5-runtime
+FROM injeans/cuda-runtime
 MAINTAINER NVIDIA CORPORATION <digits@nvidia.com>
 
 RUN apt-get update && apt-get install -y --no-install-recommends --force-yes \
